--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
     <div class="pengalaman-img">
         <a href="img/ihsan.jpeg" target="_blank">
-            <img src="img/ihsan.jpeg" height="150px" width="300px" alt="Experience 2" />
+            <img src="img/Ihsan.jpeg" height="150px" width="300px" alt="Experience 2" />
         </a>
         <h3>Diskominfo Kabupaten Bandung</h3>
         <p>
